unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/SDO_Community_Idea_Issues__c.object-meta.xml
<CustomObject>
    <description>What: Idea Issues object. Used in Communities.</description>
    <label>Idea Issue</label>
    <nameField>
        <label>Project Issue Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>