unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>