unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>