unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>SDO_Community_Ideas_Projects__c</referenceTo>
    <relationshipName>Project_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>