unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/fields/Resolution_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Strategy__c</fullName>
    <label>Resolution Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>