unpackaged/main/default/objects/SDO_Community_Idea_Issues__c/fields/Team_Member_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N8a00000BTyM0EAL</relationshipName>
    <type>Lookup</type>
</CustomField>